--- a/SwiftDemo/Base.lproj/Main.storyboard
+++ b/SwiftDemo/Base.lproj/Main.storyboard
@@ -22,43 +22,70 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uuy-ay-HpQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="335"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="345"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="asE-Mc-n3H">
-                                                <rect key="frame" x="19" y="20" width="337.5" height="322.5"/>
+                                                <rect key="frame" x="19" y="20" width="337.5" height="332.5"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="UMQ-Vh-ewV">
-                                                        <rect key="frame" x="0.0" y="0.0" width="337.5" height="137.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="337.5" height="147.5"/>
                                                         <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Key Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yz6-5q-YKk">
-                                                                <rect key="frame" x="0.0" y="0.0" width="337.5" height="20.5"/>
-                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                <nil key="highlightedColor"/>
-                                                            </label>
+                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="10e-DT-v27">
+                                                                <rect key="frame" x="0.0" y="0.0" width="337.5" height="30"/>
+                                                                <subviews>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Key Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yz6-5q-YKk">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="113" height="30"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="width" constant="113" id="h9R-pR-DIN"/>
+                                                                        </constraints>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phase ( DEV, STAGE, REAL )" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lHh-OJ-XAy">
+                                                                        <rect key="frame" x="132" y="0.0" width="205.5" height="30"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                        <textInputTraits key="textInputTraits"/>
+                                                                        <connections>
+                                                                            <outlet property="delegate" destination="BYZ-38-t0r" id="IXX-f7-Tj5"/>
+                                                                        </connections>
+                                                                    </textField>
+                                                                </subviews>
+                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <constraints>
+                                                                    <constraint firstItem="lHh-OJ-XAy" firstAttribute="top" secondItem="10e-DT-v27" secondAttribute="top" id="3qz-aw-aRM"/>
+                                                                    <constraint firstAttribute="trailing" secondItem="lHh-OJ-XAy" secondAttribute="trailing" id="4dg-g6-C0B"/>
+                                                                    <constraint firstItem="Yz6-5q-YKk" firstAttribute="top" secondItem="10e-DT-v27" secondAttribute="top" id="Aj0-nH-ebh"/>
+                                                                    <constraint firstAttribute="height" constant="30" id="HbC-Pe-VnD"/>
+                                                                    <constraint firstAttribute="bottom" secondItem="lHh-OJ-XAy" secondAttribute="bottom" id="RIa-bB-dGy"/>
+                                                                    <constraint firstAttribute="bottom" secondItem="Yz6-5q-YKk" secondAttribute="bottom" id="glh-8y-cd0"/>
+                                                                    <constraint firstItem="Yz6-5q-YKk" firstAttribute="leading" secondItem="10e-DT-v27" secondAttribute="leading" id="p5U-9E-VI6"/>
+                                                                    <constraint firstItem="lHh-OJ-XAy" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Yz6-5q-YKk" secondAttribute="trailing" constant="19" id="t4C-Xw-4S5"/>
+                                                                </constraints>
+                                                            </view>
                                                             <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="KeySet Alias" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VuY-f5-b0H">
-                                                                <rect key="frame" x="0.0" y="25.5" width="337.5" height="34"/>
+                                                                <rect key="frame" x="0.0" y="35" width="337.5" height="34"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                 <textInputTraits key="textInputTraits"/>
                                                             </textField>
                                                             <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="campaign Key" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rNc-vL-g6L">
-                                                                <rect key="frame" x="0.0" y="64.5" width="337.5" height="34"/>
+                                                                <rect key="frame" x="0.0" y="74.5" width="337.5" height="34"/>
                                                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                 <textInputTraits key="textInputTraits"/>
                                                             </textField>
                                                             <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="access Key" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vMh-AE-6hM">
-                                                                <rect key="frame" x="0.0" y="103.5" width="337.5" height="34"/>
+                                                                <rect key="frame" x="0.0" y="113.5" width="337.5" height="34"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                 <textInputTraits key="textInputTraits"/>
                                                             </textField>
                                                         </subviews>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="137.5" id="vSa-n9-cpt"/>
+                                                            <constraint firstAttribute="height" constant="147.5" id="vSa-n9-cpt"/>
                                                         </constraints>
                                                     </stackView>
                                                     <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="MN8-0n-Rhg">
-                                                        <rect key="frame" x="0.0" y="142.5" width="337.5" height="155"/>
+                                                        <rect key="frame" x="0.0" y="152.5" width="337.5" height="155"/>
                                                         <subviews>
                                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="userId" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nfr-wy-Qz2">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="34"/>
@@ -89,7 +116,7 @@
                                                         </constraints>
                                                     </stackView>
                                                     <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="bzb-9b-Jsh">
-                                                        <rect key="frame" x="0.0" y="142.5" width="337.5" height="145"/>
+                                                        <rect key="frame" x="0.0" y="152.5" width="337.5" height="145"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NeR-pe-pA5">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="31"/>
@@ -164,7 +191,7 @@
                                                         </constraints>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Q2w-5t-Lw0">
-                                                        <rect key="frame" x="0.0" y="147.5" width="337.5" height="67"/>
+                                                        <rect key="frame" x="0.0" y="157.5" width="337.5" height="67"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Ov-Xj-QCU">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="31"/>
@@ -229,7 +256,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="EMD-nB-WtB">
-                                                        <rect key="frame" x="0.0" y="224.5" width="337.5" height="98"/>
+                                                        <rect key="frame" x="0.0" y="234.5" width="337.5" height="98"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aoG-AX-DsD">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="44"/>
@@ -303,6 +330,7 @@
                         <outlet property="keyAccess" destination="vMh-AE-6hM" id="7Nx-w2-04c"/>
                         <outlet property="keyAlias" destination="VuY-f5-b0H" id="tmT-yV-moW"/>
                         <outlet property="keyCampaign" destination="rNc-vL-g6L" id="PAF-Aw-WUl"/>
+                        <outlet property="keyPhase" destination="lHh-OJ-XAy" id="CC5-on-l8G"/>
                         <outlet property="menuItemViews" destination="asE-Mc-n3H" id="dIg-M9-rBq"/>
                         <outlet property="pipCUstomSize" destination="mly-Ko-yMO" id="bxN-Pp-6i6"/>
                         <outlet property="pipCustomPosition" destination="pvA-GV-jSF" id="tH4-7z-O8k"/>
@@ -318,7 +346,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1386.9565217391305" y="101.08695652173914"/>
+            <point key="canvasLocation" x="1386.4000000000001" y="100.29985007496252"/>
         </scene>
         <!--Key Set Register Controller-->
         <scene sceneID="40n-4u-xcO">
