--- a/ShopLiveDemo/Base.lproj/Main.storyboard
+++ b/ShopLiveDemo/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ShopLiveSwiftSample" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ShopLiveDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -21,10 +21,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uuy-ay-HpQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="421.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="464"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="asE-Mc-n3H">
-                                                <rect key="frame" x="19" y="20" width="337.5" height="406"/>
+                                                <rect key="frame" x="19" y="20" width="337.5" height="447"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="UMQ-Vh-ewV" userLabel="Key Settings">
                                                         <rect key="frame" x="0.0" y="0.0" width="337.5" height="147.5"/>
@@ -277,8 +277,38 @@
                                                             </stackView>
                                                         </subviews>
                                                     </stackView>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hOg-r2-dAN" userLabel="Log switch">
+                                                        <rect key="frame" x="0.0" y="362" width="337.5" height="31"/>
+                                                        <subviews>
+                                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Go8-yM-bre">
+                                                                <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" constant="49" id="Z1d-sf-6S9"/>
+                                                                </constraints>
+                                                                <connections>
+                                                                    <action selector="switchActionWithSwItem:" destination="BYZ-38-t0r" eventType="valueChanged" id="VzL-o2-fqN"/>
+                                                                </connections>
+                                                            </switch>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show Log" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s2T-IL-tya">
+                                                                <rect key="frame" x="68" y="0.0" width="269.5" height="31"/>
+                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                        <constraints>
+                                                            <constraint firstAttribute="bottom" secondItem="s2T-IL-tya" secondAttribute="bottom" id="K8u-Ef-WoY"/>
+                                                            <constraint firstAttribute="bottom" secondItem="Go8-yM-bre" secondAttribute="bottom" id="LyP-pY-O5q"/>
+                                                            <constraint firstAttribute="trailing" secondItem="s2T-IL-tya" secondAttribute="trailing" id="a47-6s-MX2"/>
+                                                            <constraint firstItem="s2T-IL-tya" firstAttribute="top" secondItem="hOg-r2-dAN" secondAttribute="top" id="ei4-eF-dzW"/>
+                                                            <constraint firstItem="Go8-yM-bre" firstAttribute="leading" secondItem="hOg-r2-dAN" secondAttribute="leading" id="l2k-kx-Z7i"/>
+                                                            <constraint firstItem="Go8-yM-bre" firstAttribute="top" secondItem="hOg-r2-dAN" secondAttribute="top" id="xgK-Ub-g4u"/>
+                                                            <constraint firstItem="s2T-IL-tya" firstAttribute="leading" secondItem="Go8-yM-bre" secondAttribute="trailing" constant="19" id="xl5-c0-j3F"/>
+                                                        </constraints>
+                                                    </view>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="EMD-nB-WtB" userLabel="Buttons Functional">
-                                                        <rect key="frame" x="0.0" y="362" width="337.5" height="44"/>
+                                                        <rect key="frame" x="0.0" y="403" width="337.5" height="44"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vhS-hG-jXK">
                                                                 <rect key="frame" x="0.0" y="0.0" width="337.5" height="44"/>
@@ -347,6 +377,7 @@
                         <outlet property="signInViews" destination="MN8-0n-Rhg" id="RuS-68-79r"/>
                         <outlet property="swAutoResume" destination="3el-yo-Eyn" id="N2x-1h-2P4"/>
                         <outlet property="swKeepPlayUnplugged" destination="rAZ-TT-NKD" id="l0r-Sl-Gft"/>
+                        <outlet property="swLog" destination="Go8-yM-bre" id="bvm-Rn-tqd"/>
                         <outlet property="swPipSetting" destination="vgw-ae-1EG" id="D4D-dF-ixI"/>
                         <outlet property="swSignIn" destination="9oV-aS-GrK" id="eeq-fs-MPR"/>
                         <outlet property="userId" destination="Nfr-wy-Qz2" id="oVW-o1-mvd"/>
@@ -360,7 +391,7 @@
         <!--Key Set Register Controller-->
         <scene sceneID="40n-4u-xcO">
             <objects>
-                <viewController storyboardIdentifier="KeySetRegisterController" id="tv3-dS-cQq" customClass="KeySetRegisterController" customModule="ShopLiveSwiftSample" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="KeySetRegisterController" id="tv3-dS-cQq" customClass="KeySetRegisterController" customModule="ShopLiveDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fjU-vr-oje">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
