--- a/ShopLiveDemo/Base.lproj/Main.storyboard
+++ b/ShopLiveDemo/Base.lproj/Main.storyboard
@@ -92,7 +92,7 @@
                                                             <constraint firstAttribute="height" constant="147.5" id="vSa-n9-cpt"/>
                                                         </constraints>
                                                     </stackView>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="kWb-cI-2J3" userLabel="Sound Policy">
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="kWb-cI-2J3" userLabel="Sound Policy">
                                                         <rect key="frame" x="0.0" y="157.5" width="337.5" height="112.5"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sound Policy Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GtG-af-YdU">
@@ -113,7 +113,7 @@
                                                                             <action selector="switchActionWithSwItem:" destination="BYZ-38-t0r" eventType="valueChanged" id="jFc-7H-Z2s"/>
                                                                         </connections>
                                                                     </switch>
-                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이어폰/헤드폰 연결이 끊기면 영상을 멈추지 않습니다." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aBw-42-Elj">
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이어폰/헤드폰 연결이 끊기면 영상을 멈추지 않습니다." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aBw-42-Elj">
                                                                         <rect key="frame" x="68" y="0.0" width="269.5" height="41"/>
                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -127,6 +127,7 @@
                                                                     <constraint firstItem="rAZ-TT-NKD" firstAttribute="top" secondItem="UtE-lq-7Bx" secondAttribute="top" id="F4c-zZ-k8i"/>
                                                                     <constraint firstItem="aBw-42-Elj" firstAttribute="leading" secondItem="rAZ-TT-NKD" secondAttribute="trailing" constant="19" id="F5v-DT-hDL"/>
                                                                     <constraint firstAttribute="trailing" secondItem="aBw-42-Elj" secondAttribute="trailing" id="O2h-Pr-ipR"/>
+                                                                    <constraint firstAttribute="height" constant="41" id="TAR-PW-jrx"/>
                                                                     <constraint firstAttribute="bottom" secondItem="aBw-42-Elj" secondAttribute="bottom" id="ddi-9a-gYi"/>
                                                                     <constraint firstItem="aBw-42-Elj" firstAttribute="top" secondItem="UtE-lq-7Bx" secondAttribute="top" id="wwK-4P-Bjg"/>
                                                                 </constraints>
@@ -143,7 +144,7 @@
                                                                             <action selector="switchActionWithSwItem:" destination="BYZ-38-t0r" eventType="valueChanged" id="e9L-bz-CIl"/>
                                                                         </connections>
                                                                     </switch>
-                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="통화 종료 후, 영상을 자동으로 재생합니다." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zuf-b9-tMX">
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="통화 종료 후, 영상을 자동으로 재생합니다." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zuf-b9-tMX">
                                                                         <rect key="frame" x="68" y="0.0" width="269.5" height="41"/>
                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -154,6 +155,7 @@
                                                                 <constraints>
                                                                     <constraint firstAttribute="trailing" secondItem="zuf-b9-tMX" secondAttribute="trailing" id="16f-Ap-Twc"/>
                                                                     <constraint firstAttribute="bottom" secondItem="zuf-b9-tMX" secondAttribute="bottom" id="439-fS-sNk"/>
+                                                                    <constraint firstAttribute="height" constant="41" id="DlO-rw-Vtq"/>
                                                                     <constraint firstItem="3el-yo-Eyn" firstAttribute="leading" secondItem="mPP-3g-JcL" secondAttribute="leading" id="Ktl-qZ-AnD"/>
                                                                     <constraint firstItem="zuf-b9-tMX" firstAttribute="leading" secondItem="3el-yo-Eyn" secondAttribute="trailing" constant="19" id="ZfF-c0-LwL"/>
                                                                     <constraint firstAttribute="bottom" secondItem="3el-yo-Eyn" secondAttribute="bottom" id="ah6-8f-Nel"/>
